--- a/css/style.scss
+++ b/css/style.scss
@@ -7,29 +7,8 @@ $colorButton: #FF9316;
 $colorOrange: #FFA438;
 $colorRed: #EF1C31;
 $colorGreen: #2F9626;
+$lightGreyBorder: #E7EEF6;
 
-@font-face {
-    font-family: 'Inter';
-    src: local('Inter'),
-        url('.././assets/fonts/Inter-Light.ttf');
-}
-@font-face {
-    font-family: 'Inter';
-    src: local('Inter'),
-        url('.././assets/fonts/Inter-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: local('Inter'),
-        url('.././assets/fonts/Inter-Medium.ttf');
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: local('Inter'),
-        url('.././assets/fonts/Inter-SemiBold.ttf');
-}
 
 html,
 body {
@@ -45,28 +24,38 @@ h3 {
     font-weight: 600;
     font-size: 22px;
     color: $colorText;
-    margin: 0 0 15px 0;
+    margin: 15px 0;
 }
 
 h4 {
-	font-weight: 500;
+    font-weight: 500;
     font-size: 16px;
     color: $colorText;
-    margin: 0;
+    margin: 10px 0;
 }
 
 p {
-    font-weight: 300;
+    font-weight: 400;
     font-size: 14px;
     color: $colorText;
     // margin-bottom: 0;
     // margin-top: 0;
 }
 
-ul {
+button {
+    border: 0;
+    background-color: inherit;
+}
+
+// ul {
+//     // margin-left: 5px;
+//     padding-left: 25px;
+
+// }
+.list {
     // margin-left: 5px;
     padding-left: 25px;
-    
+
 }
 
 li {
@@ -96,18 +85,22 @@ li {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.main{
-	margin-top: 40px;
+
+.main {
+    margin-top: 40px;
+    margin: 40px;
 }
 
 // -----------------------------
-.container-resume{
-	display: flex;
-	gap: 38px;
+.container-resume {
+    display: flex;
+    gap: 38px;
 }
+
 .resume {
     max-width: 710px;
     width: 100%;
+    overflow: hidden;
 }
 
 .person__img-avatar {
@@ -122,58 +115,771 @@ li {
     width: 20px;
     height: 20px;
 }
-.person__time{
-	 background-image: url(".././assets/svg/time.svg");
+
+.person__time {
+    background-image: url(".././assets/svg/time.svg");
     width: 18px;
     height: 18px;
 }
-.person__icon--file{
-	background-image: url(".././assets/svg/file.svg");
-	width: 24px;
-	height: 24px;
+
+.person__icon--file {
+    background-image: url(".././assets/svg/file.svg");
+    width: 24px;
+    height: 24px;
+    position: relative;
+    display: inline-block;
 }
-.person__icon--download{
-	background-image: url(".././assets/svg/download.svg");
-	width: 24px;
-	height: 24px;
+
+.person__icon--download {
+    background-image: url(".././assets/svg/download.svg");
+    width: 24px;
+    height: 24px;
 }
-.person__icon--printer{
-	background-image: url(".././assets/svg/printer.svg");
-	width: 24px;
-	height: 24px;
+
+.person__icon--printer {
+    background-image: url(".././assets/svg/printer.svg");
+    width: 24px;
+    height: 24px;
 }
-.person__icon{
-	cursor: pointer;
+
+.person__icon {
+    cursor: pointer;
 }
-.person__title{
-	display: flex;
-	// justify-content: space-between;
-	gap: 20px;
+
+.person__title {
+    display: flex;
+    // justify-content: space-between;
+    gap: 20px;
 }
-.person__user-name{
-	align-self: left;
+
+.person__user-name {
+    align-self: left;
 }
+
 .person__location,
-.person__update{
-	display: flex;
-	align-items: center;
+.person__update {
+    display: flex;
+    align-items: center;
 }
-.person__icons{
-	display: flex;
-	justify-content: space-between;
-	gap: 23px;
-	 margin-left: auto;
-  margin-right: 0;
+
+.person__icons {
+    display: flex;
+    justify-content: space-between;
+    gap: 23px;
+    margin-left: auto;
+    margin-right: 0;
 }
-.person__additional-info{
-	width: 100%;
-	display: flex;
-	gap: 20px; 
+
+.person__additional-info {
+    width: 100%;
+    display: flex;
+    gap: 20px;
 }
-.person__possibility--text-title{
-	max-width: 165px;
-	width: 100%;
+
+.person__possibility--text-title {
+    max-width: 165px;
+    width: 100%;
 }
-.person__possibility--text-title, .person__possibility--text{
-	// min-height: 35px;
+
+.person__possibility--text-title,
+.person__possibility--text {
+    // min-height: 35px;
+}
+
+
+//------ Work ---------
+
+
+.block__text {
+    text-transform: uppercase;
+}
+
+.block__data {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.block {
+    height: 42px;
+    background-color: #FAFCFD;
+    border-bottom: 1px solid #D8DEEB;
+    margin-bottom: 20px;
+    display: flex;
+    gap: 0.5em;
+    align-items: center;
+}
+
+.organization__name::before {
+    content: "";
+    background-image: url('.././assets/svg/firm.svg');
+    background-size: cover;
+    height: 16px;
+    width: 16px;
+
+    margin-right: 5px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.organization__post::before {
+    content: "";
+    background-image: url('.././assets/svg/firm.svg');
+    background-size: cover;
+    height: 16px;
+    width: 16px;
+
+    margin-right: 5px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.organization__link {
+    font-size: 12px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.subtitle {
+    font-weight: 600;
+}
+
+.show-element,
+.hide-element {
+    font-size: 12px;
+    cursor: pointer;
+}
+
+// - Slider ------
+
+
+.slider {
+    // max-width: 697px;
+
+    width: 97%;
+    height: 145px;
+    // margin: 30px;
+    overflow: hidden;
+    position: relative;
+
+}
+
+.slider-img {
+    width: 145px;
+    border-radius: 0.5rem;
+    font-size: 0;
+    display: block;
+    margin: 0;
+    cursor: pointer;
+}
+
+.slider-line {
+    display: flex;
+    gap: 10px;
+    position: relative;
+    left: 0;
+    transition: 0.5s;
+
+}
+
+.portfolio {
+    position: relative;
+}
+
+.slider-next {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    border: 0;
+    border-radius: 50%;
+    right: 0px;
+    cursor: pointer;
+    margin-top: 55px;
+    background-image: url(".././assets/svg/right.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+}
+
+//--- Aside ---
+.aside {
+    max-width: 290px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.salary {
+    display: flex;
+    justify-content: space-between;
+}
+
+.salary__summ {
+    font-size: 28px;
+    font-weight: 500;
+    margin: 0;
+}
+
+.salary__menu {
+    height: 20px;
+    width: 20px;
+    background-image: url('.././assets/svg/points.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+}
+
+
+
+.offer__items {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.offer__btn,
+.offer__btn2 {
+    max-width: 234px;
+    width: 100%;
+    height: 36px;
+    background-color: $colorOrange;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    border-radius: 0.3rem;
+    transition: 0.5s;
+}
+
+.offer__btn:hover {
+    background-color: #FF9316;
+}
+
+.offer__check {
+    width: 36px;
+    height: 36px;
+    // background-color: #EEF2F4;
+    border-radius: 50%;
+    background-image: url(".././assets/svg/heart-grey.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    // background-size: contain;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.offer__check:hover {
+    background-image: url(".././assets/svg/heart-red-stroke.svg");
+}
+
+.offer__checked {
+    background-image: url(".././assets/svg/heart-red.svg") !important;
+}
+
+.offer__img {
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+    // padding-left: 20px;
+}
+
+.offer__img--think {
+    background-image: url(".././assets/svg/think.svg");
+}
+
+.offer__img--video {
+    background-image: url(".././assets/svg/videocall.svg");
+}
+
+.offer__img--office {
+    background-image: url(".././assets/svg/office.svg");
+}
+
+.offer__img--phonecall {
+    background-image: url(".././assets/svg/phone-call.svg");
+}
+
+.offer__img--test {
+    background-image: url(".././assets/svg/test.svg");
+}
+
+.offer__img--job {
+    background-image: url(".././assets/svg/job.svg");
+}
+
+.offer__img--work {
+    background-image: url(".././assets/svg/work.svg");
+}
+
+
+.offer__menu {
+    max-width: 234px;
+    width: 100%;
+    height: auto;
+    background-color: #ffffff;
+    border-radius: 0.3rem;
+    position: absolute;
+    // border: 1px solid $lightGreyBorder;
+    background: $lightGreyBorder;
+    // padding-bottom: 10px;
+    // padding-top: 10px;
+}
+
+.hidden {
+    height: 0 !important;
+    font-size: 0px !important;
+}
+
+.offer__list {
+    max-width: inherit;
+    // width: 100%;
+    height: 38px;
+    display: flex;
+    // justify-content: center;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    padding-left: 10px;
+    transition: 0.3s;
+
+
+}
+
+.offer__list:hover {
+    background-color: #F5F7F8;
+}
+
+.offer__text {
+    font-size: 13px;
+
+}
+
+.offer__last {
+    width: 99%;
+    height: auto;
+    border: 1px solid transparent;
+    border-radius: 0.5rem;
+    margin-top: 30px;
+    transition: 0.5s;
+}
+
+.offer__box {
+    max-width: 290px;
+    width: 100%;
+}
+
+// .offer__last:hover{
+//     background-color: $lightGreyBorder;
+// }
+.added {
+    // margin-top: 20px;
+    height: 74px;
+
+}
+
+.added:hover {
+    background-color: inherit;
+}
+
+.offer__description {
+    // text-align: right;
+    // padding: 10px;
+    margin-top: 5px;
+    font-size: 12px;
+    font-weight: 400;
+    color: $colorLightText;
+}
+
+.offer__text--last {
+    color: #232056;
+    font-weight: 600;
+}
+
+.offer-history {
+    margin-top: 20px;
+    width: 99%;
+    max-width: 290px;
+    cursor: pointer;
+}
+
+.offer-history__header {
+    width: inherit;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid $lightGreyBorder;
+    border-radius: 0.5rem 0.5rem 0 0;
+
+}
+
+.offer-history__title {
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+.offer-history__arrow {
+    width: 30px;
+    height: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+    background-image: url(".././assets/svg/offer-arrow.svg");
+    transform: rotate(180deg);
+    transition: 0.5s;
+}
+
+.tr-arrow {
+    transform: rotate(0deg);
+}
+
+.history-body {
+    width: inherit;
+    height: 0;
+    overflow: hidden;
+    transition: 0.3s;
+    border: transparent;
+}
+
+.history-body__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.5s;
+}
+
+.history-body__figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 10px;
+
+    img {
+        width: 24px;
+        height: 24px;
+    }
+
+    figcaption {
+        font-size: 12px;
+    }
+
+}
+
+.history-body__img {
+    // border-right: 3px solid #5FB6E7;
+    margin: 10px 0px;
+}
+
+.history-body__descr {
+    width: 70%;
+}
+
+.history-body__position {
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 0px;
+}
+
+.history-body__type {
+    font-size: 12px;
+}
+
+.hide-history {
+    transform: translateY(-900px);
+    transition: 0.5s;
+    z-index: -1;
+}
+
+.border {
+    border: 1px solid $lightGreyBorder;
+    border-radius: 0 0 0.5rem 0.5rem;
+    height: auto;
+}
+
+.note {
+    max-width: 402px;
+    width: 80%;
+    height: 345px;   
+    position: fixed;
+    background-color: #F5F5F5;
+    border-radius: 3rem 3rem 0.5rem 0.5rem / 2rem 2rem 0.5rem 0.5rem;
+    padding: 20px;
+    top: 40px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    transition: 0.5s;
+
+}
+
+.note__body {
+    font-size: 20px;
+    width: 100%;
+    height: 220px;
+    background-color: #ffffff;
+    min-height: 130px;
+    border-radius: 0.5rem;
+    border: 1px solid $lightGreyBorder;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    resize: none;
+
+}
+
+.note__body:active,
+.note__body:focus {
+    border: 1px solid $lightGreyBorder;
+    outline: none;
+}
+
+.note__btns {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.cancel {
+    width: 189px;
+    height: 42px;
+    background-color: #ffffff;
+    border-radius: 0.5rem;
+    cursor: pointer;
+
+}
+
+.save {
+    width: 189px;
+    height: 42px;
+    background-color: $colorOrange;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+.close-note {
+    transform: translateY(-900px);
+}
+
+// --- modal ---
+
+.modal {
+    // max-width: 450px;
+    // width: 100%;
+    // height: 600px;
+    // height: auto;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    // transform: translateY(-1900px);
+    transform: scale(0);
+    background: rgba(134, 134, 134, .4);
+    backdrop-filter: blur(10px);
+    transition: 0.5s;
+    z-index: 10;
+}
+
+.show-modal-port {
+    // transform: translateY(0px);
+    transform: scale(1);
+}
+
+.modal__slider {
+    max-width: 350px;
+    width: 100%;
+    display: flex;
+    margin: 10% auto;
+    overflow: hidden;
+    position: relative;
+}
+
+.modal__slider-line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease 0.5s;
+
+}
+
+.modal__figure {
+
+    max-width: 450px;
+    width: 100%;
+    margin: 0;
+    border-radius: 0.5rem 0.5rem 0 0;
+
+    img {
+        max-width: 450px;
+        width: 100%;
+        border-radius: 0.5rem 0.5rem 0 0;
+        display: block;
+    }
+
+    figcaption {
+        width: 100%;
+        background-color: #ffffff;
+        box-sizing: border-box;
+    }
+}
+
+.modal__figcaption {
+    padding-top: 20px;
+    padding-left: 20px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.modal__figcaption1 {
+    font-size: 16px;
+    padding-left: 20px;
+}
+
+.modal__figcaption2 {
+    border-radius: 0 0 0.5rem 0.5rem;
+    // padding: 5px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    padding-top: 5px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+
+.modal__prev,
+.modal__next {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #585C62;
+    opacity: 0.7;
+    // z-index: 110;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.modal__prev {
+    top: 45%;
+    left: 10px;
+    background-image: url('.././assets/svg/modal-prev.svg');
+}
+
+.modal__next {
+    right: 10px;
+    top: 45%;
+    background-image: url('.././assets/svg/modal-next.svg');
+}
+
+.close-modal {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    // right: 0px;
+    // top: 0;
+    display: none;
+    background-image: url('.././assets/svg/close-modal.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.header-mobile {
+    width: 100%;
+    height: 48px;
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+    }
+}
+
+.header__arrow {
+    width: 32px;
+    height: 32px;
+
+    transform: rotate(90deg);
+    background-image: url('.././assets/svg/offer-arrow.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    cursor: pointer;
+}
+.header-mobile{
+    display: none;
+}
+
+@media (max-width: 800px) {
+    .aside {
+        display: none;
+    }
+    .person__icon--printer{
+        display: none;
+    }
+    .header-mobile{
+        display: block;
+        position: fixed;
+        top: 0;
+        background: #ffffff;
+        z-index: 10;
+        padding: 5px 0;
+    }
+    .header-info{
+        display: flex;
+        // justify-content: space-around;
+        align-items: center;
+        margin-left: 10px;
+    }
+    .header-info__img{
+        img{
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+    }
+    .person__icons{
+        // margin: 0;
+    }
+    .header-info__name{
+        font-size: 14;
+        font-weight: 500;
+        margin: 0;
+    }
+    .header-info__position{
+        font-size: 13px;
+        font-weight: 400;
+        margin: 0;
+    }
+    .person__title{
+        flex-direction: column;
+        align-items: center;
+    }
+    .main{
+        margin-top: 60px;
+    }
+    .person__gender{
+        display: none;
+    }
+    .person__user-name{
+         text-align: center;        
+    }
+    .person__update{
+        justify-content: center;
+    }
+    .modal__slider{
+        margin: 110px auto;
+    }
+    
 }
