fix: any styles

--- a/css/style.scss
+++ b/css/style.scss
@@ -609,7 +609,7 @@ li {
     height: 345px;   
     position: fixed;
     background-color: #F5F5F5;
-    border-radius: 3rem 3rem 0.5rem 0.5rem / 2rem 2rem 0.5rem 0.5rem;
+    border-radius: 1rem;
     padding: 20px;
     top: 40px;
     bottom: 0;
