--- a/css/style.scss
+++ b/css/style.scss
@@ -279,6 +279,7 @@ li {
     left: 0;
     transition: 0.5s;
 
+
 }
 
 .portfolio {
@@ -717,11 +718,12 @@ li {
     margin: 0;
     border-radius: 0.5rem 0.5rem 0 0;
 
+
     img {
         max-width: 450px;
         width: 100%;
         border-radius: 0.5rem 0.5rem 0 0;
-        display: block;
+        display: block;        
     }
 
     figcaption {
@@ -883,6 +885,10 @@ li {
     }
     .offer__box{
         margin: 0 auto;
+    }
+    .slider-line{
+        
+
     }
     
 }
